changes not commited

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 
   <body>
 
+    <main>
+
+      <h1 class="awesome-title">
+        My first Responsive website
+      </h1>
+
+      <p class="awesome-text">Hello World!! This is an awesome text!</p>
+
+      <div class="awesome-images">
+          <img src="img/hello.jpg" alt="this is my first awesome image"/>
+          <img src="img/hello2.jpg" alt="this is my second awesome image"/>
+      </div>
+      
+    </main>
 
   </body>
 </html>
